@@ -50,7 +50,7 @@ class DiffOpRemove extends DiffOp {
 	}
 
 	/**
-	 * @see \Serializable::serialize()
+	 * @see Serializable::serialize
 	 *
 	 * @since 0.1
 	 *
@@ -61,7 +61,7 @@ class DiffOpRemove extends DiffOp {
 	}
 
 	/**
-	 * @see \Serializable::unserialize()
+	 * @see Serializable::unserialize
 	 *
 	 * @since 0.1
 	 *
